{{$NEXT}}

0.083     2013-05-02 15:21:03 America/Los_Angeles

    Updated to be compatible with Pinto 0.082 or newer.  Now that
    Pinto ships with Pinto::Remote, you no longer have to choose
    which to install.

    However, I've tried to rig it up so that you can install this
    module in PERL5LIB along with all your other Dzil plugins, whilst
    using the libraries from a stand-alone Pinto that is installed
    in PINTO_HOME.

    I'm not sure if this will work out.  Please let me know about
    your experiences.

0.046     2012-08-13 17:21:31 America/Los_Angeles

    Now requires Pinto-0.46 or Pinto::Remote-0.046.  These are
    not listed as dependencies, so you can decide which one
    you need to install.

    You can now specify which stack to put the release on.

    Added functional tests, but they only run if you have
    the proper Pinto backends installed.

    The "auth" configuration parameter has been renamed
    to "authenticate" to avoid confusion with the "author"
    parameter.

0.033     2012-03-17 01:29:36 America/Los_Angeles

    Added support for the "norecurse" option.  This behaves
    the same way as --norecurse on pinto-admin and pinto-remote.
    You'll need version 0.033 or better of Pinto or Pinto::Server
    to use this.  Thanks Karen Etheridge for inspiring this!

0.030     2012-01-26 22:51:38 America/Los_Angeles

    The "repos" attribute is now called "root", which is
    consistent with the rest of the Pinto tools.  You'll
    need to change your dist.ini files accordingly.

    You can now release to multiple repositories by specifying
    multiple values for the "root" attribute. [ Thanks reneeb! ]

    You'll be prompted to enter your author ID if we can't
    figure out your username.

    Now requires either Pinto-0.030 or Pinto::Remote-0.030 or
    higher (depending on whether you release to local or
    remote repositories).  Just as before, neither of these
    are explicit dependencies, so you have to choose the