@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    [BUG FIXES]
+
+    - Remote repository URLs may now use HTTPS.  Requires Pinto 0.091
+    or later.
+
 0.083     2013-05-02 15:21:03 America/Los_Angeles
 
     Updated to be compatible with Pinto 0.082 or newer.  Now that
